prevent overflow

--- a/src/static/css/page.css
+++ b/src/static/css/page.css
@@ -10,3 +10,7 @@
 #page > * {
 	margin: 0.5em 0;
 }
+
+#page * {
+	max-width: 100%;
+}
